Adiciona tela de inserção de eventos
Adiciona tela de inserção de eventos

--- a/projects/agenda/templates/agenda.html
+++ b/projects/agenda/templates/agenda.html
@@ -1,6 +1,9 @@
 {% extends "model_page.html" %}
 {% block content %}
     <h1>Agendamentos</h1>
+    <a href="evento/">
+        <button type="button">Novo Evento</button>
+    </a>
 
     <ul>
         {% for evento in eventos %}
