Adiciona edição e remoção de eventos

--- a/projects/agenda/templates/login.html
+++ b/projects/agenda/templates/login.html
@@ -11,7 +11,7 @@
             <label>Usuário</label>
             <input type="text" name="username">
             <label>Senha</label>
-            <input type="text" name="password">
+            <input type="password" name="password">
             <button type="submit">Entrar</button>
         </div>
     </form>
