--- a/projects/agenda/templates/agenda.html
+++ b/projects/agenda/templates/agenda.html
@@ -7,7 +7,15 @@
 
     <ul>
         {% for evento in eventos %}
-            <li><b>{{ evento.titulo }} - {{ evento.get_data_evento }}</b></li>
+            <li>
+                <b>{{ evento.titulo }} - {{ evento.get_data_evento }} </b>
+                (<a href="evento/?id={{ evento.id }}">Editar</a>
+                / <a href="evento/delete/{{ evento.id }}">Excluir</a> )
+                <br>
+                <b>{{ evento.descricao }}</b>
+                <br>
+                <br>
+            </li>
         {% endfor %}
     </ul>
 {% endblock %}
