--- a/projects/agenda/templates/agenda.html
+++ b/projects/agenda/templates/agenda.html
@@ -8,9 +8,13 @@
     <ul>
         {% for evento in eventos %}
             <li>
-                <b>{{ evento.titulo }} - {{ evento.get_data_evento }} </b>
-                (<a href="evento/?id={{ evento.id }}">Editar</a>
-                / <a href="evento/delete/{{ evento.id }}">Excluir</a> )
+                <div style={% if evento.get_evento_atrasado %}
+                            "color:red"
+                            {% endif %}>
+                    <b>{{ evento.titulo }} - {{ evento.get_data_evento }} </b>
+                    (<a href="evento/?id={{ evento.id }}">Editar</a>
+                    / <a href="evento/delete/{{ evento.id }}">Excluir</a> )
+                </div>
                 <br>
                 <b>{{ evento.descricao }}</b>
                 <br>
